log
Fri 21 Apr 2023 06:35:13 PM UTC: 
 treemap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  1|8
total_score: 0/70
cb26eeb
Fri 21 Apr 2023 06:38:12 PM UTC: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  1|8
total_score: 0/70
da28861
Fri 21 Apr 2023 06:39:47 PM UTC: 
 treemap.c | 7 +++----
 1 file changed, 3 insertions(+), 4 deletions(-)
 tests:  4|7
total_score: 5/70
8da1a8c
Fri 21 Apr 2023 06:48:44 PM UTC: 
 treemap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  4|7
total_score: 5/70
a6e83ff
Fri 21 Apr 2023 07:02:47 PM UTC: 
 treemap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  4|7
total_score: 5/70
972c89a
Fri 21 Apr 2023 07:20:12 PM UTC: 
 treemap.c | 25 +++++++++++++++++++------
 1 file changed, 19 insertions(+), 6 deletions(-)
test.c: In function ‘insertTreeMap’:
test.c:503:5: error: ‘main’ is normally a non-static function [-Werror=main]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:606:1: error: expected declaration or statement at end of input
  606 | }
      | ^
At top level:
test.c:503:5: error: ‘main’ defined but not used [-Werror=unused-function]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
cc1: all warnings being treated as errors
Compilation failed
6be7f13
